
name:               sox2
version:            0.1
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           Functional bindings to SOX command-line DSP.
category:           
tested-with:        GHC
build-type:         Simple

description:
    A simple language for describing sounds based on SOX (experimental).

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/sox2.git

library
    build-depends:
        base            >= 4 && < 5,
        semigroups      >= 0.15.2 && < 1,
        temporary       >= 1.2.0 && < 2,
        async           >= 2.0.1.5 && < 3,
        process         >= 1.2.0 && < 2
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Sound.Sox2
